--- a/src/components/login-page/login-page.template.html
+++ b/src/components/login-page/login-page.template.html
@@ -7,11 +7,11 @@
 	    </div>
 
 			<div class="form-group">
-				<label for="username" class="cols-sm-2 control-label">Username</label>
+				<label for="username" class="cols-sm-2 control-label">Login Id</label>
 				<div class="cols-sm-10">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-						<input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
+						<input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.loginid"  placeholder="Enter your Username"/>
 						<div ng-messages="LoginForm.username.$error" role="alert" multiple="">
 					</div>
 				</div>
