--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -23,10 +23,10 @@
               <h3 class="cols-sm-2 control-label">Enter your Account details</h3>
             </div>
             <div class="form-group">
-              <label for="username" class="cols-sm-2 control-label">Username</label>
+              <label for="username" class="cols-sm-2 control-label">Login ID</label>
               <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                <input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
+                <input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.loginid"  placeholder="Enter your Username"/>
               </div>
             </div>
             <div class="form-group">
