--- a/src/components/app-header/app-header.style.css
+++ b/src/components/app-header/app-header.style.css
@@ -15,3 +15,27 @@
   cursor: pointer;
   color: rgb(255, 255, 255);
 }
+
+.dropdown {
+    /*position: relative;*/
+    display: inline-block;
+    color: rgb(200, 200, 200);
+    font-size: 17px;
+    text-align: center;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 260px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 0px 0px;
+    z-index: 1;
+    text-align: left;
+    border-radius: 2px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: inline;
+}
