--- a/src/components/view-travel/view-travel.template.html
+++ b/src/components/view-travel/view-travel.template.html
@@ -5,15 +5,15 @@
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col col-xs-6">
-                            <h3 class="panel-title">Find here your schedule <b>{{$ctrl.travel.username}}</b> </h3>
-                        </div>                        
+                            <h3 class="panel-title">Find your schedule to <b>{{$ctrl.travel.destination}}</b> here, {{$ctrl.travel.username}} ({{$ctrl.travel.arrival}} to {{$ctrl.travel.departure}})</h3>
+                        </div>
                     </div>
                 </div>
 
                 <div class="panel-body">
                    <table id="mytable" class="table table-striped table-bordered table-list">
                         <thead>
-                        <tr>                       
+                        <tr>
                             <th class="col-text">Attraction Name</th>
                             <th class="col-text">Starting</th>
                             <th class="col-text">Ending</th>
@@ -28,12 +28,13 @@
                             <td> <a href={{schedule.url}}>Book</a> </td>
                             </tr>
                         </tbody>
-                    </table> 
+                    </table>
                 </div>
 
                 <div class="panel-footer">
+                  Find all your existing Travels in your User Profile.
                     <div class="row">
-                        
+
                         <div class="col col-xs-3">
                             <div class="pull-right">
                                 <button type="button" class="btn btn-primary">
