--- a/src/components/app-getstarted/app-getstarted.template.html
+++ b/src/components/app-getstarted/app-getstarted.template.html
@@ -56,7 +56,7 @@
           <div class="help-block" ng-messages="register.password.$error" ng-if="register.password.$touched">
           <p ng-message="required"><b>Your Password is required.</b></p>
           <p ng-show="register.password.$error.minlength"><b>Password is too short.</b></p>
-          <p ng-show="register.password.$error.maxlength"><b>Password is too loong.</b></p>
+          <p ng-show="register.password.$error.maxlength"><b>Password is too long.</b></p>
         </div>
   			</div>
   		</div>
