Improved About Page
Ditched Partners Page and Improved About Page for that

--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -7,8 +7,9 @@
 
 
       <li><a ng-click="$ctrl.home()">Home</a></li>
-      <li><a ng-click="$ctrl.partners()">Partners</a></li>
       <li><a ng-click="$ctrl.about()">About</a></li>
+      <!-- deemed unusefull
+      <li><a ng-click="$ctrl.partners()">Partners</a></li> -->
 
       <!-- DESIGN OPTION 1: Navbar Buttons -->
       <li ng-if="!$ctrl.isAuthenticated()" ng-click="$ctrl.login()"><a>Login</a></li>
