--- a/src/components/partners/partners.template.html
+++ b/src/components/partners/partners.template.html
@@ -16,7 +16,7 @@
                   </div>
                   <div class="info">
                       <h4 class="text-center">Akdemir, Duygu</h4>
-                      <p>Developer</p>
+                      <h2>Developer</h2>
                   </div>
               </div>
           </div>
@@ -28,7 +28,7 @@
                   </div>
                   <div class="info">
                       <h4 class="text-center">Bayona, Sael</h4>
-                      <p>Developer</p>
+                      <h2>Developer</h2>
                   </div>
               </div>
           </div>
@@ -44,8 +44,8 @@
                  </div>
                  <div class="info">
                      <h4 class="text-center">Frattini, Julian</h4>
-                     <p>Developer</p>
-                     <!-- <a href="" class="btn">Link</a> -->
+                     <h2>Developer</h2>
+                     <!-- <p>Julian Frattini (*15th of March 1995) is a University Student enrolled in the Master of Informatics at the Technische Universität München. He is part of Team 59 in the course SEBA Master: Web Application Engineering and contributes as an developer and designer.</p> -->
                  </div>
              </div>
          </div>
@@ -57,7 +57,7 @@
                  </div>
                  <div class="info">
                      <h4 class="text-center">Neset, Ragnhild</h4>
-                     <p>Developer</p>
+                     <h2>Developer</h2>
                  </div>
              </div>
          </div>
