--- a/src/components/about-page/about-page.template.html
+++ b/src/components/about-page/about-page.template.html
@@ -4,8 +4,88 @@
         <h1 class="cover-heading">About</h1>
         <p class="lead">
           <b>Plan Your Holiday</b> is a software project for the Course <i>Software Engineering für betriebliche Anwendungen – Masterkurs: Web Application Engineering (IN2087)</i> developed by team 59.
-          Goal of the project is to design and implement a Singl-Page Web Application utilizing the MEAN-Stack.
+          Goal of the project is to design and implement a Single-Page Web Application utilizing the MEAN-Stack.
         </p>
       </div>
    </header>
+
+   <div class="container">
+     <div class="row">
+       <div class="col-sm-12">
+         <br>
+         <br>
+         <div class="row">
+           <div class="col-md-3">
+             <div class="box">
+                 <div class="box-icon">
+                     <span class="fa fa-4x fa-calendar"></span>
+                 </div>
+                 <div class="info">
+                     <h4 class="text-center">Purpose</h4>
+                     <p>The Website shall generate a schedule depending on the personal preferences of a user.</p>
+                 </div>
+             </div>
+           </div>
+           <div class="col-md-3">
+             <div class="box">
+                 <div class="box-icon">
+                     <span class="fa fa-4x fa-file-code-o" aria-hidden="true" ></span>
+                 </div>
+                 <div class="info">
+                     <h4 class="text-center">Utilized Software</h4>
+                     <p>Main Software-Bundel: MEAN-Stack (MongoDB, Express, AngularJS, Node.js). Development in Atom, Webstorm and Visual Studio. Version Control via GitHub.</p>
+                 </div>
+             </div>
+           </div>
+           <div class="col-md-3">
+             <div class="box">
+                <div class="box-icon">
+                    <span class=" fa fa-4x fa-github" ></span>
+                </div>
+                <div class="info">
+                    <h4 class="text-center">Sourcecode</h4>
+                    <p>Access and inspect the sourcecode in the Repositories</p>
+                    <p><a href="https://github.com/ragnhildneset/plan-your-holiday-frontend">Frontend</a></p>
+                    <p><a href="https://github.com/ragnhildneset/plan-your-holiday-backend">Backend</a></p>
+                    <p>Contact the <a href='mailto:ga92dad@mytum.de?subject=[SEBA Team59] GitHub Access'>repository owner</a> for details.</p>
+                </div>
+            </div>
+           </div>
+           <div class="col-md-3">
+             <div class="box">
+                <div class="box-icon">
+                    <span class="fa fa-4x fa-users" ></span>
+                </div>
+                <div class="info">
+                    <h4 class="text-center">Team 59</h4>
+                    <table style="width:100%">
+                     <tr>
+                       <th>Name</th>
+                       <th>Matrikelnumber</th>
+                     </tr>
+                     <tr>
+                       <td><b>Akdemir, Duygu</b></td>
+                       <td>03644366</td>
+                     </tr>
+                     <tr>
+                       <td><b>Bayona, Sael</b></td>
+                       <td>03680979</td>
+                     </tr>
+                     <tr>
+                       <td><b>Frattini, Julian</b></td>
+                       <td>03648050</td>
+                     </tr>
+                     <tr>
+                       <td><b>Neset, Ragnhild</b></td>
+                       <td>03685092</td>
+                     </tr>
+                    </table>
+                    <a href='mailto:sael.bayona@tum.de,Duygu.Akdemir@gmx.net,ga92dad@mytum.de,ga38jat@mytum.de?subject=[SEBA Team59] Automated Contact'>Contact Team</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
