--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -24,10 +24,10 @@
             </div>
             <form name="userForm" method="post" action="#" novalidate>
             <div class="form-group" ng-class="{ 'has-error': userForm.username.$touched && userForm.username.$invalid }">
-              <label for="username" >Username</label>
+              <label for="username" >Login ID</label>
               <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                <input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username" required/>
+                <input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.loginid"  placeholder="Enter your Username" required/>
               </div>
               <div class="help-block" ng-messages="userForm.username.$error" ng-if="userForm.username.$touched">
         			<p ng-message="required"><b>Your name is required.</b></p>
