--- a/src/components/feedback/feedback.template.html
+++ b/src/components/feedback/feedback.template.html
@@ -5,27 +5,32 @@
         <p class="lead">Where will you go next?</p>
       </div>
   </header>
+    <form name="form" ng-submit="$ctrl.rate()" role="form">
     <div class="white-background">
       <div class="rating-card-container">
         <div ng-repeat="activity in $ctrl.travel.schedule">
           <div class="card">
              <div class="container">
-               <h2 class="card-title">{{ activity.attractionName }}</h2>
+               <h2 class="card-title">{{ activity.attractionname }}</h2>
                <br/>
                <h5><b>Quality</b></h5>
                <p>How well did you like the activity?</p>
-               <span uib-rating ng-model="$ctrl.rating[activity._id].quality" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
+               <span uib-rating ng-model="$ctrl.rating[activity.attractionId].quality" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
                <br/>
                <br/>
                <h5><b>Popularity</b></h5>
                 <p>How popular is this activity among tourists?</p>
-               <span uib-rating ng-model="$ctrl.rating[activity._id].popularity" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
+               <span uib-rating ng-model="$ctrl.rating[activity.attractionId].popularity" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
                <br/>
              </div>
           </div>
       </div>
     </div>
     </div>
+    <div class="form-actions">
+        <button type="submit" ng-disabled="form.$invalid || dataLoading" class="btn btn-primary btn-lg btn-block btn-darkblue">Rate</button>
+    </div>
+  </form>
 
 </div>
 
