--- a/src/components/view-travel/view-travel.template.html
+++ b/src/components/view-travel/view-travel.template.html
@@ -44,6 +44,13 @@
                                 </button>
                             </div>
                         </div>
+                        <div class="col col-xs-3">
+                            <div class="pull-right">
+                                <button type="button" ng-click="$ctrl.rate()" class="btn btn-primary">
+                                    Rate
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
