--- a/src/components/category-selection/category-selection.style.css
+++ b/src/components/category-selection/category-selection.style.css
@@ -75,7 +75,7 @@
     height: 250px;
     background-size: cover;
 }
-.info h4 {
+.info1 h4 {
     color: #ffffff;
     font-size: 26px;
     letter-spacing: 2px;
