--- a/src/components/category-selection/category-selection.template.html
+++ b/src/components/category-selection/category-selection.template.html
@@ -31,7 +31,7 @@
             <div class="row">
               <div class="col-md-3">
                 <div class="box3">
-                  <div class="info">
+                  <div class="info1">
                     <h4 class="text-center"><strong>Monuments</strong></h4>
                     <br> <br> <br> <br> <br> <br> <br>
                     <input id="Monuments" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="0"/>
@@ -40,7 +40,7 @@
               </div>
               <div class="col-md-3">
                 <div class="box4">
-                  <div class="info">
+                  <div class="info1">
                     <h4 class="text-center"><strong>Museums</strong></h4>
                     <br> <br> <br> <br> <br> <br> <br>
                     <input id="Museums" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="0"/>
@@ -49,7 +49,7 @@
               </div>
               <div class="col-md-3">
                 <div class="box5">
-                  <div class="info">
+                  <div class="info1">
                     <h4 class="text-center"><strong>Parks</strong></h4>
                     <br> <br> <br> <br> <br> <br> <br>
                     <input id="Parks" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value=""/>
@@ -58,7 +58,7 @@
               </div>
               <div class="col-md-3">
                 <div class="box6">
-                  <div class="info">
+                  <div class="info1">
                     <h4 class="text-center"><strong>Churches</strong></h4>
                     <br> <br> <br> <br> <br> <br> <br>
                     <input id="Churches" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="0"/>
